cppcheck/reports/195691_report.txt
vm.c:1786:0: information: Include file: "mruby/ops.h" not found. [missingInclude]
#include "mruby/ops.h"
^
vm.c:1796:0: information: Include file: "mruby/ops.h" not found. [missingInclude]
#include "mruby/ops.h"
^
vm.c:1806:0: information: Include file: "mruby/ops.h" not found. [missingInclude]
#include "mruby/ops.h"
^
vm.c:1:1: portability: Omitted return type of function 'mrb_vm_exec' defaults to int, this is not supported by ISO C99 and later standards. [returnImplicitInt]
mrb_vm_exec(mrb_state *mrb, const struct RProc *proc, const mrb_code *pc)
^
vm.c:2:1: information: Limiting ValueFlow analysis in function 'mrb_vm_exec' since it is too complex. Please specify --check-level=exhaustive to perform full analysis. [checkLevelNormal]
{
^
vm.c:37:3: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
  mrb->jmp = &c_jmp;
  ^
vm.c:1764:7: warning: %d in format string (no. 1) requires 'int' but the argument type is 'unsigned int'. [invalidPrintfArgType_sint]
      printf("OP_DEBUG %d %d %d\n", a, b, c);
      ^
vm.c:434:10: style: Redundant initialization for 'ci'. The initialized value is overwritten before it is read. [redundantInitialization]
      ci = cipush(mrb, a, 0, cls, NULL, mid, c);
         ^
vm.c:418:24: note: ci is initialized
      mrb_callinfo *ci = mrb->c->ci;
                       ^
vm.c:434:10: note: ci is overwritten
      ci = cipush(mrb, a, 0, cls, NULL, mid, c);
         ^
vm.c:1151:14: style: Variable 'proc' is reassigned a value before the old one has been used. [redundantAssignment]
        proc = ci->proc;
             ^
vm.c:993:18: note: proc is assigned
            proc = ci->proc;
                 ^
vm.c:1151:14: note: proc is overwritten
        proc = ci->proc;
             ^
vm.c:104:5: style: Statements following 'goto' will never be executed. [unreachableCode]
    CASE(OP_LOADI_0,B) goto L_LOADI;
    ^
vm.c:399:5: style: inconclusive: Statements following 'goto' will never be executed. [unreachableCode]
    CASE(OP_SSENDB, BBB) {
    ^
vm.c:404:5: style: inconclusive: Statements following 'goto' will never be executed. [unreachableCode]
    CASE(OP_SEND, BBB)
    ^
vm.c:413:5: style: inconclusive: Statements following 'goto' will never be executed. [unreachableCode]
    CASE(OP_SENDB, BBB)
    ^
vm.c:1251:5: style: inconclusive: Statements following 'goto' will never be executed. [unreachableCode]
    CASE(OP_ADD, B) {
    ^
vm.c:1256:7: style: Statements following 'break' will never be executed. [unreachableCode]
      OP_MATH(sub);
      ^
vm.c:1260:7: style: Statements following 'break' will never be executed. [unreachableCode]
      OP_MATH(mul);
      ^
vm.c:1500:16: style: The scope of the variable 'idx' can be reduced. [variableScope]
      int len, idx;
               ^
vm.c:1656:30: style: The scope of the variable 'baseclass' can be reduced. [variableScope]
      struct RClass *c = 0, *baseclass;
                             ^
vm.c:1674:32: style: The scope of the variable 'baseclass' can be reduced. [variableScope]
      struct RClass *cls = 0, *baseclass;
                               ^
vm.c:316:22: style: Unsigned expression 'a' can't be negative so it is unnecessary to test it. [unsignedPositive]
        mrb_assert(a >= 0 && a < irep->ilen);
                     ^
vm.c:934:9: style: Label 'L_CATCH_TAGGED_BREAK' is not used. There is #if in function body so the label might be used in code that is removed by the preprocessor. [unusedLabelConfiguration]
        L_CATCH_TAGGED_BREAK: /* from THROW_TAGGED_BREAK() or UNWIND_ENSURE() */
        ^
vm.c:367:21: style: Local variable 'exc' shadows outer variable [shadowVariable]
          mrb_value exc;
                    ^
vm.c:357:17: note: Shadowed declaration
      mrb_value exc = regs[a];  /* exc on stack */
                ^
vm.c:367:21: note: Shadow variable
          mrb_value exc;
                    ^
vm.c:542:15: style: Local variable 'mid' shadows outer variable [shadowVariable]
      mrb_sym mid = ci->mid;
              ^
vm.c:14:11: note: Shadowed declaration
  mrb_sym mid;
          ^
vm.c:542:15: note: Shadow variable
      mrb_sym mid = ci->mid;
              ^
vm.c:920:37: style: Local variable 'c' shadows outer variable [shadowVariable]
                struct mrb_context *c = mrb->c;
                                    ^
vm.c:13:12: note: Shadowed declaration
  uint16_t c;
           ^
vm.c:920:37: note: Shadow variable
                struct mrb_context *c = mrb->c;
                                    ^
vm.c:1001:33: style: Local variable 'c' shadows outer variable [shadowVariable]
            struct mrb_context *c;
                                ^
vm.c:13:12: note: Shadowed declaration
  uint16_t c;
           ^
vm.c:1001:33: note: Shadow variable
            struct mrb_context *c;
                                ^
vm.c:1072:33: style: Local variable 'c' shadows outer variable [shadowVariable]
            struct mrb_context *c = mrb->c;
                                ^
vm.c:13:12: note: Shadowed declaration
  uint16_t c;
           ^
vm.c:1072:33: note: Shadow variable
            struct mrb_context *c = mrb->c;
                                ^
vm.c:1272:19: style: Local variable 'x' shadows outer variable [shadowVariable]
          mrb_int x = mrb_integer(regs[a]);
                  ^
vm.c:1265:17: note: Shadowed declaration
      mrb_float x, y, f;
                ^
vm.c:1272:19: note: Shadow variable
          mrb_int x = mrb_integer(regs[a]);
                  ^
vm.c:1273:19: style: Local variable 'y' shadows outer variable [shadowVariable]
          mrb_int y = mrb_integer(regs[a+1]);
                  ^
vm.c:1265:20: note: Shadowed declaration
      mrb_float x, y, f;
                   ^
vm.c:1273:19: note: Shadow variable
          mrb_int y = mrb_integer(regs[a+1]);
                  ^
vm.c:1656:22: style: Local variable 'c' shadows outer variable [shadowVariable]
      struct RClass *c = 0, *baseclass;
                     ^
vm.c:13:12: note: Shadowed declaration
  uint16_t c;
           ^
vm.c:1656:22: note: Shadow variable
      struct RClass *c = 0, *baseclass;
                     ^
vm.c:1719:15: style: Local variable 'mid' shadows outer variable [shadowVariable]
      mrb_sym mid = syms[b];
              ^
vm.c:14:11: note: Shadowed declaration
  mrb_sym mid;
          ^
vm.c:1719:15: note: Shadow variable
      mrb_sym mid = syms[b];
              ^
vm.c:1803:15: style: Local variable 'insn' shadows outer variable [shadowVariable]
      uint8_t insn = READ_B();
              ^
vm.c:7:12: note: Shadowed declaration
  mrb_code insn;
           ^
vm.c:1803:15: note: Shadow variable
      uint8_t insn = READ_B();
              ^
vm.c:273:20: style: Variable 'regs_a' can be declared as pointer to const [constVariablePointer]
        mrb_value *regs_a = regs + a;
                   ^
vm.c:703:25: style: Variable 'argv0' can be declared as pointer to const [constVariablePointer]
      mrb_value * const argv0 = argv;
                        ^
vm.c:956:27: style: Variable 'cibase' can be declared as pointer to const [constVariablePointer]
            mrb_callinfo *cibase;
                          ^
vm.c:1057:26: style: Variable 'e' can be declared as pointer to const [constVariablePointer]
            struct REnv *e = MRB_PROC_ENV(proc);
                         ^
vm.c:1835:19: style: Variable 'ci' can be declared as pointer to const [constVariablePointer]
    mrb_callinfo *ci = mrb->c->ci;
                  ^
vm.c:20:0: information: Include file: "mruby/ops.h" not found. [missingInclude]
#include "mruby/ops.h"
^
vm.c:1252:7: style: Statements following 'break' will never be executed. [unreachableCode]
      OP_MATH(add);
      ^
vm.c:1339:7: style: Statements following 'break' will never be executed. [unreachableCode]
      OP_MATHI(add);
      ^
vm.c:1343:7: style: Statements following 'break' will never be executed. [unreachableCode]
      OP_MATHI(sub);
      ^
vm.c:1769:7: style: inconclusive: Statements following noreturn function 'abort()' will never be executed. [unreachableCode]
      NEXT;
      ^
vm.c:1:0: style: The function 'mrb_vm_exec' is never used. [unusedFunction]
mrb_vm_exec(mrb_state *mrb, const struct RProc *proc, const mrb_code *pc)
^
